<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="212dp"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/add_photo_string" />

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:foregroundGravity="left"
                android:padding="5dp" />
<!--                app:srcCompat="@drawable/dzhek" -->
            <!--                tools:srcCompat="@tools:sample/avatars" -->

            <Button
                android:id="@+id/button_add_photo"
                android:layout_width="166dp"
                android:layout_height="58dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/capture_photo_string"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_name_string" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/current_light_string" />

            <TextView
                android:id="@+id/sensor_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:text="@string/save_string" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:textSize="20dp"
        android:layout_weight="1"
        android:text="@string/sensors_list_string" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="283dp"
        android:layout_weight="1" />
</LinearLayout>